@@ -1,3 +1,10 @@
+2012-11-20  Jonathan Yong  <jon_y@users.sourceforge.net>
+
+	* stdio.h: vswprintf is now ISO C compliant, the API is not
+	compatible with the older version. AS with MSVC, define
+	_CRT_NON_CONFORMING_SWPRINTFS to get back the old behavior.
+	* wchar.h: Likewise.
+
 2012-08-29  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
 
 	* stdio.h (_mingw_ovr): Use GCC form for both C and C++.
